observability/jaeger/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: jaeger-query 
  namespace: monitoring
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: jaeger-query
          servicePort: 16686
        path: /jaeger(/|$)(.*)
