observability/jaeger/traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  name: jaeger-query 
  namespace: monitoring
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: jaeger-query
          servicePort: 16686
        path: /jaeger
